# cxpkg

./: Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  main.rs
src/backend/: apt.rs  dnf.rs  flatpak.rs  mod.rs
src/package/: metadata.rs  mod.rs
src/resolver/: mod.rs
