[package]
name = "cxpkg"
version = "0.1.0"
edition = "2021"
description = "Unified package manager for CentrexOS"
license = "MIT"

[[bin]]
name = "cxpkg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
indicatif = "0.17"
console = "0.15"
dirs = "5"
semver = "1"
